--- a/package.json
+++ b/package.json
@@ -12,11 +12,7 @@
     "serve:ssr": "node dist/server.js --port 4004",
     "build:prod": "ng build --prod --configuration=production --output-path=dist/prod/browser && ng run angular2app:server:production --output-path=dist/prod/server",
     "build:test": "ng build --prod --configuration=test --output-path=dist/test/browser && ng run angular2app:server:test --output-path=dist/test/server",
-    "analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats.json",
-    "analyze-es5": "webpack-bundle-analyzer dist/browser/stats-es5.json",
-    "banalyze-es5": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats-es5.json",
-    "analyze-es2015": "webpack-bundle-analyzer dist/browser/stats-es2015.json",
-    "banalyze-es2015": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats-es2015.json",
+    "analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats-es2015.json",
     "sm": "npm run build -- --sourceMap=true --outputHashing=none && source-map-explorer dist/browser/main-es2015.js dist/browser/main-es2015.js.map"
   },
   "dependencies": {
