--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "core-js": "3.6.4",
     "node-sass": "4.13.1",
     "rxjs": "6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
+    "zone.js": "0.10.3",
     "ngx-image-cropper": "2.1.2",
     "ngx-pagination": "4.1.0"
   },
@@ -57,7 +56,7 @@
     "@types/tinymce": "4.5.24",
     "codelyzer": "5.2.2",
     "source-map-explorer": "2.4.1",
-    "tinymce": "4.9.3",
+    "tinymce": "4.9.7",
     "ts-loader": "6.2.2",
     "ts-node": "8.8.1",
     "tslint": "6.1.0",
