--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,14 +1,29 @@
-name: Deploy-to-test
- 
-on: [push]
- 
+# This is a basic workflow to help you get started with Actions
+
+name: deploy-test
+
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+ # push:
+ #   branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+  deployment:
+    branches: [ master ]
+    
+    
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
- 
-    # using Ubuntu
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
- 
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1 #this installs node and npm for us
       with:
@@ -31,9 +46,8 @@ jobs:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.FOR_SSH }}
+        KEY: ${{ secrets.forSSH }}
       with:
         source: "./dist/test/"
-        target: ${{ secrets.FOR_SSH }}
+        target: ${{ secrets.TEST_DIST }}
         strip_components: 3 # this is important
- 
