--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,13 +4,7 @@ name: deploy-test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
- # push:
- #   branches: [ master ]
-#  pull_request:
-#    branches: [ master ]
-  deployment:
-    branches: [ master ]
+on: repository_dispatch
     
     
 
