--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
     "@angular/router": "9.1.0",
     "@angular/service-worker": "9.1.0",
     "@aspnet/signalr": "1.0.4",
-    "@ngxs/store": "3.6.2",
+    "@cedx/ngx-cookies": "3.0.0",
     "@nguniversal/common": "9.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "@nguniversal/express-engine": "9.1.0",
-    "express": "4.17.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
+    "@ngxs/store": "3.6.2",
     "angular2-recaptcha": "1.1.0",
     "core-js": "3.6.4",
+    "express": "4.17.1",
+    "ngx-image-cropper": "2.1.2",
+    "ngx-pagination": "4.1.0",
     "node-sass": "4.13.1",
     "rxjs": "6.5.5",
-    "zone.js": "0.10.3",
-    "ngx-image-cropper": "2.1.2",
-    "ngx-pagination": "4.1.0"
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.0",
