--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,29 +19,21 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1 #this installs node and npm for us
+    - name: Install Node.js
+      uses: actions/setup-node@v1
       with:
         node-version: '12.x'
- 
-    - uses: actions/cache@v1 # this allows for re-using node_modules caching, making builds a bit faster.
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
- 
-    - run: npm install
-    - run: npm install -g @angular/cli > /dev/null
-    - run: ng build --prod
- 
-    - name: copy file via ssh key
-      uses: appleboy/scp-action@master
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build:test --if-present
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@v2.1.1
       env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: ${{ secrets.PORT }}
-        KEY: ${{ secrets.forSSH }}
-      with:
-        source: "./dist/test/"
-        target: ${{ secrets.TEST_DIST }}
-        strip_components: 3 # this is important
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          ARGS: ""
+          SOURCE: "dist/test/"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
+          TARGET: ${{ secrets.SERVER_TEST_FOLDER }}
