--- a/.github/workflows/main-test-2.yml
+++ b/.github/workflows/main-test-2.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Deploy to Server
       uses: AEnterprise/rsync-deploy@v1.0
       env:
-          DEPLOY_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          DEPLOY_KEY: ${{ secrets.SSH_PEM_KEY }}
           ARGS: ""
           FOLDER: "dist/test/"
           SERVER_IP: ${{ secrets.REMOTE_HOST }}
