--- a/.github/workflows/easingthemes.yml
+++ b/.github/workflows/easingthemes.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.1.1
       env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PEM_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PEM_KEY2 }}
           ARGS: ""
           SOURCE: "dist/test/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
