--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -9,8 +9,7 @@ on:
  #   branches: [ master ]
 #  pull_request:
 #    branches: [ master ]
-  deployment:
-    branches: [ master ]
+  pull_request
     
     
 
