--- a/.github/workflows/easingthemes.yml
+++ b/.github/workflows/easingthemes.yml
@@ -18,14 +18,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - name: Install Node.js
+   # - uses: actions/checkout@v2
+   # - name: Install Node.js
    #   uses: actions/setup-node@v1
    #   with:
   #      node-version: '12.x'
-    - name: Install npm dependencies
+  #  - name: Install npm dependencies
    #   run: npm install
-    - name: Run build task
+  #  - name: Run build task
    #   run: npm run build:test --if-present
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.1.2
