--- a/.github/workflows/easingthemes.yml
+++ b/.github/workflows/easingthemes.yml
@@ -32,7 +32,8 @@ jobs:
       env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
           ARGS: "-avzr --delete --exclude=/src/"
-          SOURCE: "dist/test/"
+         # SOURCE: "dist/test/"
+          SOURCE: "/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.SSH_DEPLOY_USER }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
