--- a/.github/workflows/easingthemes.yml
+++ b/.github/workflows/easingthemes.yml
@@ -18,22 +18,22 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-   # - uses: actions/checkout@v2
-   # - name: Install Node.js
-   #   uses: actions/setup-node@v1
-   #   with:
-  #      node-version: '12.x'
-  #  - name: Install npm dependencies
-   #   run: npm install
-  #  - name: Run build task
-   #   run: npm run build:test --if-present
+    - uses: actions/checkout@v2
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build:test --if-present
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.1.2
       env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
-          ARGS: "-avzr --delete --exclude=/src/"
-         # SOURCE: "dist/test/"
-          SOURCE: "/"
+          ARGS: "-avzr --delete --exclude=/browser/src/"
+          SOURCE: "dist/test/"
+         # SOURCE: "/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.SSH_DEPLOY_USER }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
