--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@angular/platform-server": "9.1.3",
     "@angular/router": "9.1.3",
     "@angular/service-worker": "9.1.3",
-    "@aspnet/signalr": "1.0.4",
+    "@microsoft/signalr": "3.1.3",
     "@cedx/ngx-cookies": "3.0.0",
     "@nguniversal/common": "9.1.0",
     "@nguniversal/express-engine": "9.1.0",
