--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -7,10 +7,7 @@
       "resources": {
         "files": [
           "/favicon.ico",
-          "/index.html",
-          "/scripts.*.js",
-          "/*.css",
-          "/*.js"
+          "/index.html"
         ]
       }
     },
