--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
         }
       },
       "architect": {
-        "build": {
+        "build": {          
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
@@ -103,6 +103,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 4500,
             "browserTarget": "angular2app:build",            
             "proxyConfig": "proxy.conf.json"
           },
