--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -23,8 +23,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14.x'
-    - name: Install npm dependencies
-      run: npm install
+   # - name: Install npm dependencies
+   #   run: npm install
    # - name: Run build task
    #   run: npm run build:test --if-present
     - name: Deploy to Server
