--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14.x'
-   ## - name: Install npm dependencies
+   # - name: Install npm dependencies
    #   run: npm install
    # - name: Run build task
    #   run: npm run build:test --if-present
