--- a/.github/workflows/deploy-test-2.yml
+++ b/.github/workflows/deploy-test-2.yml
@@ -23,10 +23,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14.x'
-   ## - name: Install npm dependencies
-   #   run: npm install
-   # - name: Run build task
-   #   run: npm run build:test --if-present
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build:test --if-present
     - name: Deploy to Server
       uses: kostya-ten/ssh-server-deploy@v4
       with:
