--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -3,10 +3,10 @@
 name: CI-deploy-to-test-on-each-push-1
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+## events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ test ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
