--- a/.github/workflows/deploy-test-2.yml
+++ b/.github/workflows/deploy-test-2.yml
@@ -6,7 +6,7 @@ name: CI-deploy-to-test-on-each-push-2
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ test ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
