--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/express": "4.17.11",
     "@types/node": "12.19.15",
     "@types/tinymce": "4.6.0",
+    "@types/lodash": "4.14.168",
     "codelyzer": "6.0.1",
     "source-map-explorer": "2.5.2",
     "tinymce": "4.9.11",
