--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -38,3 +38,12 @@ jobs:
           REMOTE_USER: ${{ secrets.SSH_DEPLOY_USER }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
           TARGET: ${{ secrets.PROD_DIST_FOLDER }}
+    - name: restart prod service
+      uses: fifsky/ssh-action@master
+      with:
+        command: |
+          pm2 restart prod
+        host: ${{ secrets.REMOTE_HOST }}
+        port: ${{ secrets.REMOTE_PORT }} 
+        user: ${{ secrets.SSH_DEPLOY_USER }}
+        key: ${{ secrets.SSH_DEPLOY_KEY }}
