--- a/.github/workflows/deploy-to-test.yml
+++ b/.github/workflows/deploy-to-test.yml
@@ -36,4 +36,15 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.SSH_DEPLOY_USER }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
-          TARGET: '/home/ftpuzer/sites/test-ui/' #${{ secrets.SERVER_TEST_FOLDER }}
+          TARGET: ${{ secrets.SERVER_TEST_FOLDER }}
+          
+    - name: restart prod service
+      uses: fifsky/ssh-action@master
+      with:
+        command: |
+          pm2 restart test
+        host: ${{ secrets.REMOTE_HOST }}
+        port: ${{ secrets.REMOTE_PORT }} 
+        user: ${{ secrets.SSH_DEPLOY_USER }}
+        key: ${{ secrets.SSH_DEPLOY_KEY }}
+
