--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "ng serve",
     "lint": "ng lint",
     "build": "ng build --prod --build-optimizer",
-    "build-ssr": "ng build --prod --project=server",
+    "build-ssr": "ng build --prod --project=angular2app",
+    "build-ssr2": "ng build && ng run angular2app:server --output-path=dist/local/server",
     "build-nohash": "ng build --prod --build-optimizer --output-hashing none",
-    "serve:ssr": "node dist/server.js --port 4004",
+    "serve:ssr": "node dist/local/server/main.js --port 4004",
     "build:prod": "ng build --prod --configuration=production --output-path=dist/prod/browser && ng run angular2app:server:production --output-path=dist/prod/server",
     "build:test": "ng build --prod --configuration=test --output-path=dist/test/browser && ng run angular2app:server:test --output-path=dist/test/server",
     "analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats.json",
