--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -42,7 +42,7 @@ jobs:
       uses: fifsky/ssh-action@master
       with:
         command: |
-          pm2 restart prod
+          pm2 restart main
         host: ${{ secrets.REMOTE_HOST }}
         port: ${{ secrets.REMOTE_PORT }} 
         user: ${{ secrets.SSH_DEPLOY_USER }}
