Enabled strict check types in templates.

--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "polyfills": "src/polyfills/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/manifest.json",
+              "src/manifest.webmanifest",
               "src/favicon.ico",
               "src/assets",
               {
