--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,8 @@
     "src/app/editor/tiny-module/tiny.module.ts",
     "src/app/lazy-modules/navbar-menu/navbar-menu.module.ts",
     "src/app/lazy-modules/sidebar-left/sidebar-left.module.ts",
-    "src/app/lazy-modules/sidebar-right/sidebar-right.module.ts"
+    "src/app/lazy-modules/sidebar-right/sidebar-right.module.ts",
+    "src/app/lazy-modules/admin-top-panel/admin-top-panel.module.ts"
   ],
   "include": [
     "src/**/*.d.ts"
