--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "sm": "npm run build -- --sourceMap=true --outputHashing=none && source-map-explorer dist/browser/main-es2015.js dist/browser/main-es2015.js.map"
   },
   "dependencies": {
-    "@angular/animations": "11.2.14",
+    "@angular/animations": "12.0.2",
     "@angular/cdk": "11.2.13",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
+    "@angular/common": "12.0.2",
+    "@angular/compiler": "12.0.2",
+    "@angular/compiler-cli": "12.0.2",
+    "@angular/core": "12.0.2",
+    "@angular/forms": "12.0.2",
     "@angular/material": "11.2.13",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/platform-server": "11.2.14",
-    "@angular/router": "11.2.14",
-    "@angular/service-worker": "11.2.14",
+    "@angular/platform-browser": "12.0.2",
+    "@angular/platform-browser-dynamic": "12.0.2",
+    "@angular/platform-server": "12.0.2",
+    "@angular/router": "12.0.2",
+    "@angular/service-worker": "12.0.2",
     "@cedx/ngx-cookies": "3.1.0",
     "@microsoft/signalr": "5.0.6",
     "@nguniversal/common": "11.2.1",
@@ -41,12 +41,12 @@
     "ngx-image-cropper": "2.1.2",
     "ngx-pagination": "4.1.0",
     "rxjs": "6.6.7",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.13",
-    "@angular-devkit/schematics": "11.2.13",
-    "@angular/cli": "11.2.13",
+    "@angular-devkit/build-angular": "12.0.2",
+    "@angular-devkit/schematics": "12.0.2",
+    "@angular/cli": "12.0.2",
     "@nguniversal/builders": "11.2.1",
     "@ngxs/devtools-plugin": "3.7.1",
     "@ngxs/logger-plugin": "3.7.1",
@@ -61,7 +61,7 @@
     "ts-loader": "9.2.2",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.5",
+    "typescript": "4.2.4",
     "webpack-bundle-analyzer": "4.4.2",
     "webpack-cli": "4.7.0"
   },
