Updated material to v12. Moved code for cookie service to local instead of npm

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "ng serve --proxy-config proxy.conf.json",
     "start": "ng serve",
     "lint": "ng lint",
-    "build": "ng build --prod --build-optimizer",
+    "build": "ng build --configuration production --build-optimizer",
     "build-ssr": "ng build --prod --project=angular2app",
     "build-ssr2": "ng build && ng run angular2app:server --output-path=dist/local/server",
     "build-nohash": "ng build --prod --build-optimizer --output-hashing none",
@@ -18,21 +18,20 @@
   },
   "dependencies": {
     "@angular/animations": "12.0.2",
-    "@angular/cdk": "11.2.13",
+    "@angular/cdk": "12.0.2",
     "@angular/common": "12.0.2",
     "@angular/compiler": "12.0.2",
     "@angular/compiler-cli": "12.0.2",
     "@angular/core": "12.0.2",
     "@angular/forms": "12.0.2",
-    "@angular/material": "11.2.13",
+    "@angular/material": "12.0.2",
     "@angular/platform-browser": "12.0.2",
     "@angular/platform-browser-dynamic": "12.0.2",
     "@angular/platform-server": "12.0.2",
     "@angular/router": "12.0.2",
     "@angular/service-worker": "12.0.2",
-    "@cedx/ngx-cookies": "3.1.0",
     "@microsoft/signalr": "5.0.6",
-    "@nguniversal/common": "11.2.1",
+    "@nguniversal/common": "12.0.1",
     "@nguniversal/express-engine": "11.2.1",
     "@ngxs/store": "3.7.1",
     "angular2-recaptcha": "1.1.0",
@@ -47,7 +46,7 @@
     "@angular-devkit/build-angular": "12.0.2",
     "@angular-devkit/schematics": "12.0.2",
     "@angular/cli": "12.0.2",
-    "@nguniversal/builders": "11.2.1",
+    "@nguniversal/builders": "12.0.1",
     "@ngxs/devtools-plugin": "3.7.1",
     "@ngxs/logger-plugin": "3.7.1",
     "@schematics/angular": "11.2.13",
