--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "ng serve",
     "lint": "ng lint",
     "build": "ng build --configuration production --build-optimizer",
-    "build-ssr": "ng build --prod --project=angular2app",
+    "build-ssr": "ng build --configuration production --project=angular2app",
     "build-ssr2": "ng build && ng run angular2app:server --output-path=dist/local/server",
-    "build-nohash": "ng build --prod --build-optimizer --output-hashing none",
+    "build-nohash": "ng build --configuration production --build-optimizer --output-hashing none",
+    "build-server-prod" : "ng run angular2app:server:production --output-path=dist/prod/server",
     "serve:ssr": "node dist/local/server/main.js --port 4004",
-    "build:prod": "ng build --prod --configuration=production --output-path=dist/prod/browser && ng run angular2app:server:production --output-path=dist/prod/server",
-    "build:test": "ng build --prod --configuration=test --output-path=dist/test/browser && ng run angular2app:server:test --output-path=dist/test/server",
+    "build:prod": "ng build --configuration production --configuration=production --output-path=dist/prod/browser && ng run angular2app:server:production --output-path=dist/prod/server",
+    "build:test": "ng build --configuration production --configuration=test --output-path=dist/test/browser && ng run angular2app:server:test --output-path=dist/test/server",
     "analyze": "npm run build -- --stats-json && webpack-bundle-analyzer dist/browser/stats.json",
     "sm": "npm run build -- --sourceMap=true --outputHashing=none && source-map-explorer dist/browser/main-es2015.js dist/browser/main-es2015.js.map"
   },
