FIxed issue with server that 'blob is not defined'

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-ssr": "ng build --configuration production --project=angular2app",
     "build-ssr2": "ng build && ng run angular2app:server --output-path=dist/local/server",
     "build-nohash": "ng build --configuration production --build-optimizer --output-hashing none",
-    "build-server-prod" : "ng run angular2app:server:production --output-path=dist/prod/server",
+    "build-server-prod": "ng run angular2app:server:production --output-path=dist/prod/server",
     "serve:ssr": "node dist/local/server/main.js --port 4004",
     "build:prod": "ng build --configuration production --configuration=production --output-path=dist/prod/browser && ng run angular2app:server:production --output-path=dist/prod/server",
     "build:test": "ng build --configuration production --configuration=test --output-path=dist/test/browser && ng run angular2app:server:test --output-path=dist/test/server",
@@ -36,6 +36,7 @@
     "@nguniversal/express-engine": "12.1.0",
     "@ngxs/store": "3.7.2",
     "angular2-recaptcha": "1.1.0",
+    "blob-polyfill": "5.0.20210201",
     "core-js": "3.16.3",
     "express": "4.17.1",
     "ngx-image-cropper": "2.1.2",
