--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "sm": "npm run build -- --sourceMap=true --outputHashing=none && source-map-explorer dist/browser/main-es2015.js dist/browser/main-es2015.js.map"
   },
   "dependencies": {
-    "@angular/animations": "12.2.15",
-    "@angular/cdk": "12.2.13",
-    "@angular/common": "12.2.15",
-    "@angular/compiler": "12.2.15",
-    "@angular/compiler-cli": "12.2.15",
-    "@angular/core": "12.2.15",
-    "@angular/forms": "12.2.15",
-    "@angular/material": "12.2.13",
-    "@angular/platform-browser": "12.2.15",
-    "@angular/platform-browser-dynamic": "12.2.15",
-    "@angular/platform-server": "12.2.15",
-    "@angular/router": "12.2.15",
-    "@angular/service-worker": "12.2.15",
+    "@angular/animations": "13.0.0",
+    "@angular/cdk": "13.0.0",
+    "@angular/common": "13.0.0",
+    "@angular/compiler": "13.0.0",
+    "@angular/compiler-cli": "13.0.0",
+    "@angular/core": "13.0.0",
+    "@angular/forms": "13.0.0",
+    "@angular/material": "13.0.0",
+    "@angular/platform-browser": "13.0.0",
+    "@angular/platform-browser-dynamic": "13.0.0",
+    "@angular/platform-server": "13.0.0",
+    "@angular/router": "13.0.0",
+    "@angular/service-worker": "13.0.0",
     "@microsoft/signalr": "6.0.1",
-    "@nguniversal/common": "12.1.3",
-    "@nguniversal/express-engine": "12.1.3",
+    "@nguniversal/common": "13.0.0",
+    "@nguniversal/express-engine": "13.0.0",
     "@ngxs/store": "3.7.2",
     "angular2-recaptcha": "1.1.0",
     "blob-polyfill": "6.0.20211015",
@@ -42,16 +42,16 @@
     "ngx-image-cropper": "2.1.2",
     "ngx-pagination": "4.1.0",
     "rxjs": "6.6.7",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.13",
-    "@angular-devkit/schematics": "12.2.13",
-    "@angular/cli": "12.2.13",
-    "@nguniversal/builders": "12.1.3",
+    "@angular-devkit/build-angular": "13.0.0",
+    "@angular-devkit/schematics": "13.0.0",
+    "@angular/cli": "13.0.0",
+    "@nguniversal/builders": "13.0.0",
     "@ngxs/devtools-plugin": "3.7.2",
     "@ngxs/logger-plugin": "3.7.2",
-    "@schematics/angular": "12.2.13",
+    "@schematics/angular": "13.0.0",
     "@types/express": "4.17.13",
     "@types/node": "16.11.17",
     "@types/tinymce": "4.6.4",
