--- a/.github/workflows/deploy-test-branch-to-test.yml
+++ b/.github/workflows/deploy-test-branch-to-test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI-deploy-to-test-from-test-brnach
+name: spike-to-test
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -24,20 +24,29 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: '16.x'
     - name: Install npm dependencies
       run: npm install
- #   - name: Run build task
- #     run: npm run build:test --if-present
+    - name: Run build task
+      run: npm run build:test --if-present
     - name: Deploy to Server
-      uses: hengkx/ssh-deploy@v1.0.1
+      uses: easingthemes/ssh-deploy@v2.2.11
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+          ARGS: "-avzr --delete --exclude=/browser/src/"
+          SOURCE: "dist/test/"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.SSH_DEPLOY_USER }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }} 
+          TARGET: ${{ secrets.SERVER_TEST_FOLDER }}
+          
+    - name: restart prod service
+      uses: fifsky/ssh-action@master
       with:
-        HOST: ${{ secrets.REMOTE_HOST }}
-        PORT: ${{ secrets.REMOTE_PORT }}
-        USERNAME: ${{ secrets.SSH_DEPLOY_USER }}
-        PASSWORD: ${{ secrets.SSH_DEPLOY_PASS }}
-        SOURCE: '/'
-        TARGET: SERVER_TEST_FOLDER
-        AFTER_COMMAND: |
-          whoami
+        command: |
+          pm2 restart test
+        host: ${{ secrets.REMOTE_HOST }}
+        port: ${{ secrets.REMOTE_PORT }} 
+        user: ${{ secrets.SSH_DEPLOY_USER }}
+        key: ${{ secrets.SSH_DEPLOY_KEY }}
 
