--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "express": "4.17.2",
     "ngx-image-cropper": "2.1.2",
     "ngx-pagination": "4.1.0",
-    "rxjs": "6.6.7",
+    "rxjs": "7.5.1",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -51,8 +51,9 @@
     "@nguniversal/builders": "13.0.1",
     "@ngxs/devtools-plugin": "3.7.2",
     "@ngxs/logger-plugin": "3.7.2",
-    "@schematics/angular": "13.0.0",
+    "@schematics/angular": "13.1.2",
     "@types/express": "4.17.13",
+    "@types/jasmine": "3.10.3",
     "@types/node": "16.11.19",
     "@types/tinymce": "4.6.4",
     "@types/lodash": "4.14.178",
@@ -62,7 +63,13 @@
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "tslint": "6.1.3",
-    "typescript": "4.4.4",
+    "jasmine-core": "~3.10.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "4.5.4",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1"
   },
