--- a/.browserslistrc
+++ b/.browserslistrc
@@ -5,7 +5,7 @@
 # You can see what browsers were selected by your queries by running:
 #   npx browserslist
 
-> 0.5%
-last 3 versions
-not dead
+> 0.5% and not IE 11
+last 3 versions and not dead and not IE 11
+not dead and not IE 11
 Firefox ESR
