--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "moduleResolution": "node",
     "removeComments": true,
     "sourceMap": true,
-    "target": "es2020",
+    "target": "ES2022",
     "strict": false,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
@@ -149,8 +149,9 @@
       ],
       "@widgets/*": [
         "./src/app/widgets/*"
-      ],
+      ]
     },
+    "useDefineForClassFields": false
   },
   "typeRoots": [
     "node_modules/@types"
