--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@types/node": "18.13.0",
     "@types/tinymce": "4.6.5",
     "@types/lodash": "4.14.191",
+    "@types/express-serve-static-core": "4.17.33",
+    "@types/express": "4.17.17",
     "codelyzer": "6.0.2",
     "source-map-explorer": "2.5.3",
     "tinymce": "4.9.11",
