--- a/.browserslistrc
+++ b/.browserslistrc
@@ -5,6 +5,6 @@
 # You can see what browsers were selected by your queries by running:
 #   npx browserslist
 
-last 3 versions and not dead and not IE 11
-not dead and not IE 11
-Firefox ESR
+last 1 version
+> 0.5%
+not dead # no browsers without security updates
