--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@nguniversal/common": "15.2.1",
     "@nguniversal/express-engine": "15.2.1",
     "@ngxs/store": "3.8.0",
-    "angular2-recaptcha": "1.1.0",
     "blob-polyfill": "7.0.20220408",
     "core-js": "3.30.0",
     "express": "4.18.2",
+    "ng-recaptcha": "11.0.0",
     "ngx-image-cropper": "2.1.2",
     "ngx-pagination": "4.1.0",
     "rxjs": "7.8.0",
@@ -52,24 +52,24 @@
     "@ngxs/devtools-plugin": "3.8.0",
     "@ngxs/logger-plugin": "3.8.0",
     "@schematics/angular": "15.2.8",
+    "@types/express": "4.17.21",
+    "@types/express-serve-static-core": "4.17.41",
     "@types/jasmine": "4.6.4",
+    "@types/lodash": "4.14.202",
     "@types/node": "18.15.11",
     "@types/tinymce": "4.6.9",
-    "@types/lodash": "4.14.202",
-    "@types/express-serve-static-core": "4.17.41",
-    "@types/express": "4.17.21",
     "codelyzer": "6.0.2",
-    "source-map-explorer": "2.5.3",
-    "tinymce": "4.9.11",
-    "ts-loader": "9.4.2",
-    "ts-node": "10.9.1",
-    "tslint": "6.1.3",
     "jasmine-core": "4.6.0",
     "karma": "6.4.2",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.1",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
+    "source-map-explorer": "2.5.3",
+    "tinymce": "4.9.11",
+    "ts-loader": "9.4.2",
+    "ts-node": "10.9.1",
+    "tslint": "6.1.3",
     "typescript": "4.9.5",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.0.1"
