Updated to angular 16

--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,8 @@
             "tsConfig": "tsconfig.server.json",
             "progress": true,
             "sourceMap": true,
-            "optimization": false
+            "optimization": false,
+            "buildOptimizer": false
           },
           "configurations": {
             "production": {
@@ -136,7 +137,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "buildOptimizer": true
             },
             "test": {
               "optimization": true,
@@ -149,7 +151,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.test.ts"
                 }
-              ]
+              ],
+              "buildOptimizer": true
             }
           }
         },
