--- a/package.json
+++ b/package.json
@@ -18,22 +18,21 @@
     "sm": "npm run build -- --sourceMap=true --outputHashing=none && source-map-explorer dist/browser/main-es2015.js dist/browser/main-es2015.js.map"
   },
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/material": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/platform-server": "16.2.12",
-    "@angular/router": "16.2.12",
-    "@angular/service-worker": "16.2.12",
+    "@angular/animations": "17.0.8",
+    "@angular/cdk": "17.0.4",
+    "@angular/common": "17.0.8",
+    "@angular/compiler": "17.0.8",
+    "@angular/compiler-cli": "17.0.8",
+    "@angular/core": "17.0.8",
+    "@angular/forms": "17.0.8",
+    "@angular/material": "17.0.4",
+    "@angular/platform-browser": "17.0.8",
+    "@angular/platform-browser-dynamic": "17.0.8",
+    "@angular/platform-server": "17.0.8",
+    "@angular/router": "17.0.8",
+    "@angular/service-worker": "17.0.8",
+    "@angular/ssr": "^17.0.9",
     "@microsoft/signalr": "7.0.14",
-    "@nguniversal/common": "16.2.0",
-    "@nguniversal/express-engine": "16.2.0",
     "@ngxs/store": "3.8.2",
     "blob-polyfill": "7.0.20220408",
     "core-js": "3.30.0",
@@ -42,13 +41,12 @@
     "ngx-image-cropper": "7.0.0",
     "ngx-pagination": "6.0.3",
     "rxjs": "7.8.0",
-    "zone.js": "0.13.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.11",
-    "@angular-devkit/schematics": "16.2.11",
-    "@angular/cli": "16.2.11",
-    "@nguniversal/builders": "16.2.0",
+    "@angular-devkit/build-angular": "17.0.9",
+    "@angular-devkit/schematics": "17.0.9",
+    "@angular/cli": "17.0.9",
     "@ngxs/devtools-plugin": "3.8.2",
     "@ngxs/logger-plugin": "3.8.2",
     "@schematics/angular": "15.2.8",
@@ -70,7 +68,7 @@
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
-    "typescript": "4.9.5",
+    "typescript": "5.2.2",
     "webpack-bundle-analyzer": "4.8.0",
     "webpack-cli": "5.0.1"
   },
